--- a/backend/app/views/partial/disclaimer.scala.html
+++ b/backend/app/views/partial/disclaimer.scala.html
@@ -20,7 +20,7 @@
                 This homeopathy web site is intended for information purposes only.
                 It is not suitable for self-medication or can replace the visit of a medical doctor/GP.
                 Scientifically, homeopathy was never proven to actually work!
-                The author of this web site does not take responsibility for the correctness of this sites'
+                The author of this web site does not take responsibility for the correctness of this site's
                 results or the consequences of misusing them.
             </p>
         </div>
@@ -41,7 +41,7 @@
         <br>
         <div class="container" style="margin-top: 0.5cm; font-size:12px;">
             <p>
-                Copyright &#169; 2020-2022 Andreas Bauer. All rights reserved.
+                Copyright &#169; 2020-2023 Andreas Bauer. All rights reserved.
             </p>
         </div>
     </div>
