--- a/backend/app/views/partial/faq.scala.html
+++ b/backend/app/views/partial/faq.scala.html
@@ -226,62 +226,165 @@
 	</p>
 
   </div>
-  
+
   <div class="col">
-    
-    <h3 class="freetext">Other</h3>
-    
-    <h5 class="freetext">&bull; Why am I not getting good search results from OOREP?</h5>
 
-    <p style="text-align:justify;">
-	There are possibly three major reasons, why you may be dissatisifed with
-	the search results of this site:
-    </p>
+	<h3 class="freetext">Search</h3>
 
-    <p style="text-align:justify;">
-		1. the search returned too many results and you have trouble finding
-		the one that is specific to your need. If that's the case, you can try
-		restricting your search by adding additional search terms to narrow
-		the scope. Alternatively, you can <b>exclude</b> certain search terms
-		to make your search more specific. So, for example, rather than looking
-		for <i>pain</i>, you could look for <tt>pain, -abdomen, -head</tt>, thereby excluding
-		all results containing <i>head</i> or <i>abdomen</i>.
-    </p>
+	  <h5 class="freetext">&bull; Why am I not getting good search results from OOREP?</h5>
 
-	<div class="alert alert-primary container" style="width: 85%;">
-		<i class="oi oi-info"></i>
-		<strong class="mx-2">Info!</strong>
-		Exclude certain symptoms using <i>minus</i>, like <tt>pain, -abdomen, -head</tt>.
-	</div>
+	  <p style="text-align:justify;">
+		  There are possibly three major reasons, why you may be dissatisifed with
+		  the search results of this site:
+	  </p>
 
-    <p style="text-align:justify;">
-		2. the search doesn't return enough results for a
-		single look-up.  In this case, try using
-		so-called <b>wildcards</b>.  So, instead of looking for
-		<tt>throat, dry</tt> (2 results in publicum), you could try looking
-		for <tt>throat*, dry*</tt> (47 results in publicum).  This also
-		matches <i>dryness</i>, for example.
-    </p>
+	  <p style="text-align:justify;">
+		  1. the search returned too many results and you have trouble finding
+		  the one that is specific to your need. If that's the case, you can try
+		  restricting your search by adding additional search terms to narrow
+		  the scope. Alternatively, you can <b>exclude</b> certain search terms
+		  to make your search more specific. So, for example, rather than looking
+		  for <i>pain</i>, you could look for <tt>pain, -abdomen, -head</tt>, thereby excluding
+		  all results containing <i>head</i> or <i>abdomen</i>.
+	  </p>
 
-	<div class="alert alert-primary container" style="width: 85%;">
-		<i class="oi oi-info"></i>
-		<strong class="mx-2">Info!</strong>
-		Use the <i>star-symbol</i> as placeholder: <tt>pain*</tt> will also match <i>painful, pain, painless, pains</i>, etc.
-	</div>
+	  <div class="alert alert-primary container" style="width: 85%;">
+		  <i class="oi oi-info"></i>
+		  <strong class="mx-2">Info!</strong>
+		  Exclude certain symptoms using <i>minus</i>, like <tt>pain, -abdomen, -head</tt>.
+	  </div>
 
-	<p style="text-align:justify;">
-		3. Especially in materia medica search, you may find that results are not
-		specific enough. For example, if you look for <i>swollen gums</i> as a symptom
-		then <tt>gums, swollen</tt> gets all sections that contain symptoms about the gums
-		and swellings, but not necessarily swollen gums. You can use <b>exact search</b>
-		with explicit <b>quotation marks</b> for that as follows:
-	</p>
+	  <p style="text-align:justify;">
+		  2. the search doesn't return enough results for a
+		  single look-up.  In this case, try using
+		  so-called <b>wildcards</b>.  So, instead of looking for
+		  <tt>throat, dry</tt> (2 results in publicum), you could try looking
+		  for <tt>throat*, dry*</tt> (47 results in publicum).  This also
+		  matches <i>dryness</i>, for example.
+	  </p>
 
-	<div class="alert alert-primary container" style="width: 85%;">
-		<i class="oi oi-info"></i>
-		<strong class="mx-2">Info!</strong>
-		Search for <tt><red>"</red>gums swollen"</tt> instead of <tt>gums swollen</tt> (or even better: <tt>"gums sw*"</tt>).
-	</div>
+	  <div class="alert alert-primary container" style="width: 85%;">
+		  <i class="oi oi-info"></i>
+		  <strong class="mx-2">Info!</strong>
+		  Use the <i>star-symbol</i> as placeholder: <tt>pain*</tt> will also match <i>painful, pain, painless, pains</i>, etc.
+	  </div>
+
+	  <p style="text-align:justify;">
+		  3. Especially in materia medica search, you may find that results are not
+		  specific enough. For example, if you look for <i>swollen gums</i> as a symptom
+		  then <tt>gums, swollen</tt> gets all sections that contain symptoms about the gums
+		  and swellings, but not necessarily swollen gums. You can use <b>exact search</b>
+		  with explicit <b>quotation marks</b> for that as follows:
+	  </p>
+
+	  <div class="alert alert-primary container" style="width: 85%;">
+		  <i class="oi oi-info"></i>
+		  <strong class="mx-2">Info!</strong>
+		  Search for <tt>"gums swollen"</tt> instead of <tt>gums swollen</tt> (or even better: <tt>"gums sw*"</tt>).
+	  </div>
+
+	  <h5 class="freetext">&bull; Show me some EXAMPLE searches!</h5>
+
+	  <p style="text-align:justify;">
+		  Combine <b>wildcards</b> and <b>exclusion</b> to find all sections that contain anything about swollen gums or swellings, but no sections that merely mention sweets, or sweet taste, etc.:
+	  </p>
+
+	  <div class="alert alert-success container" style="width: 85%;">
+		  <i class="oi oi-check"></i>
+		  <strong class="mx-2">Valid:</strong>
+		  <tt>gum*, sw*, -sweet*</tt>
+	  </div>
+
+	  <p style="text-align:justify;">
+		  The <b>exact search</b> (that is, the use of quotation marks) is particularly useful for searching in a materia medica, but can be used in repertory search as well, of course.
+	  </p>
+
+	  <p style="text-align:justify;">
+		  Combine <b>exact search</b> and <b>wildcard</b> to find all sections that contain <i>wisdom teeth</i> or <i>wisdom tooth</i> (but not, <i>wisdom of Hahnemann's method</i>, for example):
+	  </p>
+
+	  <div class="alert alert-success container" style="width: 85%;">
+		  <i class="oi oi-check"></i>
+		  <strong class="mx-2">Valid:</strong>
+		  <tt>"wisdom t*"</tt>
+	  </div>
+
+	  <div class="alert alert-danger container" style="width: 85%;">
+		  <i class="oi oi-flash"></i>
+		  <strong class="mx-2">Invalid:</strong>
+		  <tt>"wisd*m teeth"</tt> (Why? A '<tt>*</tt>' can only be at beginning or end of a word.)
+	  </div>
+
+	  <p style="text-align:justify;">
+		  Combine <b>exact search</b> and <b>wildcards</b> to find all sections that contain <i>spine pain</i>, <i>spine pains</i>, <i>spinal pain</i>, or <i>spinal pains</i>, etc.:
+	  </p>
+
+	  <div class="alert alert-success container" style="width: 85%;">
+		  <i class="oi oi-check"></i>
+		  <strong class="mx-2">Valid:</strong>
+		  <tt>"spin* pain*"</tt> (Note the use of two '<tt>*</tt>' in one exact search!)
+	  </div>
+
+	  <p style="text-align:justify;">
+		  Combine <b>exact search</b> with a <b>plain search</b> to find all sections that contain <i>spine pain</i>, <i>spine pains</i>, <i>spinal pain</i>, or <i>spinal pains</i>, etc. as well as <i>headache</i>:
+	  </p>
+
+	  <div class="alert alert-success container" style="width: 85%;">
+		  <i class="oi oi-check"></i>
+		  <strong class="mx-2">Valid:</strong>
+		  <tt>"spin* pain*", headache</tt>
+	  </div>
+
+	  <p style="text-align:justify;">
+		  Combine two or more <b>exact searches</b> to find all sections that contain anything to do with heart palpitations and the exact words <i>pain in</i>:
+	  </p>
+
+	  <div class="alert alert-success container" style="width: 85%;">
+		  <i class="oi oi-check"></i>
+		  <strong class="mx-2">Valid:</strong>
+		  <tt>"heart palp*", "pain in"</tt>
+	  </div>
+
+	  <p style="text-align:justify;">
+		  Combine <b>exact search</b> with <b>exclusion</b> to find all sections that contain anything to do with heart palpitations but not the exact words <i>pain in</i>:
+	  </p>
+
+	  <div class="alert alert-success container" style="width: 85%;">
+		  <i class="oi oi-check"></i>
+		  <strong class="mx-2">Valid:</strong>
+		  <tt>"heart palp*", -"pain in"</tt>
+	  </div>
+
+	  <div class="alert alert-danger container" style="width: 85%;">
+		  <i class="oi oi-flash"></i>
+		  <strong class="mx-2">Invalid:</strong>
+		  <tt>-"heart palp*", -"pain in"</tt> (Why? You need at least one <i>positive</i> search term.)
+	  </div>
+
+	  <h5 class="freetext">&bull; When do I need the commas?</h5>
+
+	  <p style="text-align:justify;">
+		  Search does not care, if you separate search terms with a comma (',') or not.
+		  A comma really only makes a difference within an <b>exact search</b>; that is, within an enclosed term "...".
+	  </p>
+
+	  <div class="alert alert-success container" style="width: 85%;">
+		  <i class="oi oi-check"></i>
+		  <strong class="mx-2">Equal:</strong>
+		  <tt>pain*, head, left</tt> &nbsp; &nbsp; <b>=</b> &nbsp; &nbsp; <tt>pain* head left</tt>
+	  </div>
+
+	  <div class="alert alert-danger container" style="width: 85%;">
+		  <i class="oi oi-flash"></i>
+		  <strong class="mx-2">Not equal:</strong>
+		  <tt>"back, pain"</tt> &nbsp; &nbsp; <b>&#8800;</b> &nbsp; &nbsp; <tt>"back pain"</tt>
+	  </div>
+
+  </div>
+
+  <div class="col">
+
+	<h3 class="freetext">Other</h3>
 
     <h5 class="freetext">&bull; How does registration/login work?</h5>
       
