--- a/backend/app/views/index_changepassword.scala.html
+++ b/backend/app/views/index_changepassword.scala.html
@@ -33,14 +33,9 @@
     <div style="width:100%;" id="content"></div>
 
     <!-- Load JavaScript application first (e.g., in case of /show?), then execute below script. -->
-    <script src="/assets/frontend-opt.js"></script>
-
-    <!-- Now that application has loaded, display the change password dialog... -->
-    <script>
-    $(document).ready(function(){
-      ChangePasswordForm.show("@memberId", "@pcrId");
-    });
-    </script>
+    <script id="main_script" data-landing="change_password"
+            data-memberid="@memberId" data-pcrid="@pcrId"
+            src="/assets/frontend-opt.js"></script>
 
     @partial.disclaimer()
 
