--- a/backend/app/views/partial/cookiepopup.scala.html
+++ b/backend/app/views/partial/cookiepopup.scala.html
@@ -4,5 +4,5 @@
     <b>Do you like cookies?&nbsp;</b>
     \uD83C\uDF6A We use cookies to ensure you get the best experience on our website.&nbsp;
     <a href="/cookies">Learn more</a>
-    <button type="button" class="btn btn-primary btn-sm acceptcookies" onclick="sendAcceptCookies()">I understand</button>
+    <button type="button" class="btn btn-primary btn-sm acceptcookies" id="accept_cookies_button">I understand</button>
   </div>
