--- a/backend/app/views/partial/faq.scala.html
+++ b/backend/app/views/partial/faq.scala.html
@@ -139,9 +139,19 @@
 		<li>bogsk-de: German translation of <i>bogsk</i> by <a href="https://naturheilpraxis-maier.de/">Naturheilpraxis Maier</a> (2020).
 			Used with friendly permission from <b>Andreas Maier</b>.</li>
 
+<!--		<li>-->
+<!--			clarketooth: <b>J. H. Clarke:</b> <i>Repertory of Remedies for Toothache</i> (compiled from J. H. Clarke's <i>The Prescriber</i> (3rd ed., 1899) by <b>Sylvain Cazalet</b>),-->
+<!--			<a href="http://www.homeoint.org/cazalet/clarke/toothache.htm">online</a> (2003).-->
+<!--		</li>-->
+
 		<li>cowpert-de: German translation of the clinical index contained in <b>A. C. Cowperthwaite</b>'s <i>Text-Book of Materia Medica and Therapeutics</i> (John B. Delbridge & Son, 1905)
 			by <a href="https://naturheilpraxis-maier.de/">Naturheilpraxis Maier</a> (2021).
 			Used with friendly permission from <b>Andreas Maier</b>.
+		</li>
+
+		<li>
+			dorcsi-de: <b>M. Dorcsi:</b> <i>Symptomenverzeichnis</i>, <a href="https://www.hahnemann.de/">Hahnemann Institut</a>, Greifenberg (2018).
+			Used with friendly permission from <b>Reinhard Rosé</b>.
 		</li>
 
 		<li>hering: <b>C. B. Kneer:</b> <i>Repertory of Hering's Guiding Symptoms of our
@@ -189,6 +199,15 @@
 
 		<li>clarke: <b>J. H. Clarke:</b> <i>A Dictionary of Practical Materia Medica</i>,
 			The Homeopathic Publishing Company, London (1902).</li>
+
+		<li>
+			heringc: <b>C. Hering:</b> <i>Condensed Materia Medica</i>, 4th ed., Boericke &amp; Tafel, Philadelphia (1894).
+		</li>
+
+		<li>
+			heringc-de: <b>C. Hering:</b> <i>Kurzgefasste Arzneimittellehre</i> (German translation of <i>heringc</i>), <a href="https://www.hahnemann.de/">Hahnemann Institut</a>, Greifenberg (2017).
+			Used with friendly permission from <b>Reinhard Rosé</b>.
+		</li>
 	</ul>
 
     <p style="text-align:justify;">
