--- a/backend/app/views/partial/impressum.scala.html
+++ b/backend/app/views/partial/impressum.scala.html
@@ -200,13 +200,32 @@
             <li>clarke: <b>J. H. Clarke:</b> <i>A Dictionary of Practical Materia Medica</i>,
                 The Homeopathic Publishing Company, London (1902).</li>
 
+<!--            <li>-->
+<!--                clarketooth: <b>J. H. Clarke:</b> <i>Repertory of Remedies for Toothache</i> (xxtrahiert aus J. H. Clarkes <i>The Prescriber</i> (3rd ed., 1899) von <b>Sylvain Cazalet</b>),-->
+<!--                <a href="http://www.homeoint.org/cazalet/clarke/toothache.htm">online</a> (2003).-->
+<!--            </li>-->
+            
             <li>cowpert-de: Übersetzung des klinischen Indexes von <b>A. C. Cowperthwaite</b>s <i>Text-Book of Materia Medica and Therapeutics</i> (John B. Delbridge & Son, 1905)
                 durch <a href="https://naturheilpraxis-maier.de/">Naturheilpraxis Maier</a> (2021).
                 Verwendet mit freundlicher Genehmigung von <b>Andreas Maier</b>.
             </li>
 
+            <li>
+                dorcsi-de: <b>M. Dorcsi:</b> <i>Symptomenverzeichnis</i>, <a href="https://www.hahnemann.de/">Hahnemann Institut</a>, Greifenberg (2018).
+                Verwendet mit freundlicher Genehmigung von <b>Reinhard Rosé</b>.
+            </li>
+
             <li>hering: <b>C. B. Kneer:</b> <i>Repertory of Hering's Guiding Symptoms of our
                 Materia Medica</i>, F. A. Davis Co. für den Nachlass von Constantine Hering, Philadelphia (1896).</li>
+
+            <li>
+                heringc: <b>C. Hering:</b> <i>Condensed Materia Medica</i>, 4th ed., Boericke &amp; Tafel, Philadelphia (1894).
+            </li>
+
+            <li>
+                heringc-de: <b>C. Hering:</b> <i>Kurzgefasste Arzneimittellehre</i> (Übersetzung von <i>heringc</i>), <a href="https://www.hahnemann.de/">Hahnemann Institut</a>, Greifenberg (2017).
+                Verwendet mit freundlicher Genehmigung von <b>Reinhard Rosé</b>.
+            </li>
 
             <li>kent: <b>J. T. Kent:</b> <i>Repertory of the Homoeopathic Materia Medica</i>,
                 6th ed., Examiner Printing House, Lancaster, Pa. (1897).</li>
