--- a/backend/public/html/mystyle.css
+++ b/backend/public/html/mystyle.css
@@ -288,3 +288,7 @@ a.underline:hover {
 .wait > * {
   pointer-events:none;
 }
+
+textarea {
+  font-family:Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New, monospace;
+}
