--- a/backend/app/views/index_landing.scala.html
+++ b/backend/app/views/index_landing.scala.html
@@ -38,11 +38,9 @@
 
     <div style="width:100%;" id="content"></div>
 
-    <script>AOS.init();</script>
-
     @if(org.multics.baueran.frep.backend.controllers.getAuthenticatedUser(request) == None) {
 
-      <script async src="/assets/frontend-opt.js"></script>
+      <script async id="main_script" src="/assets/frontend-opt.js"></script>
 
       @partial.about()
 
@@ -50,7 +48,7 @@
 
     } else {
 
-      <script async src="/assets/sec_frontend-opt.js"></script>
+      <script async id="main_script" src="/assets/sec_frontend-opt.js"></script>
 
     }
 
