--- a/backend/app/views/partial/cookiepopup.scala.html
+++ b/backend/app/views/partial/cookiepopup.scala.html
@@ -2,7 +2,8 @@
 
   <div class="alert text-center cookiealert" role="alert" id="cookiePopup">
     <b>Do you like cookies?&nbsp;</b>
-    \uD83C\uDF6A We use cookies to ensure you get the best experience on our website.&nbsp;
+    &#127850;
+    We use cookies to ensure you get the best experience on our website.&nbsp;
     <a href="/cookies">Learn more</a>
     <button type="button" class="btn btn-primary btn-sm acceptcookies" id="accept_cookies_button">I understand</button>
   </div>
