--- a/backend/app/views/partial/disclaimer.scala.html
+++ b/backend/app/views/partial/disclaimer.scala.html
@@ -41,7 +41,7 @@
         <br>
         <div class="container" style="margin-top: 0.5cm; font-size:12px;">
             <p>
-                Copyright &#169; 2020-2023 Andreas Bauer. All rights reserved.
+                Copyright &#169; 2020-@{java.time.Year.now().getValue()} Andreas Bauer. All rights reserved.
             </p>
         </div>
     </div>
