--- a/backend/app/views/index_changepassword.scala.html
+++ b/backend/app/views/index_changepassword.scala.html
@@ -35,7 +35,7 @@
     <!-- Load JavaScript application first (e.g., in case of /show?), then execute below script. -->
     <script id="main_script" data-landing="change_password"
             data-memberid="@memberId" data-pcrid="@pcrId"
-            src="/assets/frontend-opt.js"></script>
+            src="/assets/frontend-opt/main.js"></script>
 
     @partial.disclaimer()
 
