--- a/backend/app/views/partial/impressum.scala.html
+++ b/backend/app/views/partial/impressum.scala.html
@@ -50,8 +50,7 @@
             Quell-Code unter der GPL-Lizenz veröffentlicht wurde
             (s.a. öffentliches
             <a href="https://github.com/nondeterministic/oorep">git-Repository</a>).
-            Es findet aktuell keinerlei kommerzielle Verwertung dieser
-            Webseite statt.
+            Es findet aktuell keinerlei kommerzielle Verwertung dieser Webseite statt.
         </p>
 
         <h3 class="freetext">Haftungshinweis</h3>
